--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
   </head>
   <body>
     <h1>Titulo</h1>
-    <div id="calculadora">
-      <input>
+
+    <div id="cuerpo" >
+
+      <div id="pantalla">
+        aqui ira la pantalla
+
+      </div>
+
+      <div id="teclas"> 
+        
+        <div class="boton numero" >1</div>
+        <div class="boton numero" >2</div>
+        <div class="boton numero" >3</div>
+        <div class="boton numero" >4</div>
+        <div class="boton numero" >5</div>
+        <div class="boton numero" >6</div>
+        <div class="boton numero" >7</div>
+        <div class="boton numero" >8</div>
+        <div class="boton numero" >9</div>
+        <div class="boton numero" >0</div>
+        
+        <div class="boton signo">+</div>
+        <div class="boton signo">-</div>
+        <div class="boton signo">*</div>
+        <div class="boton signo">%</div>
+        <div class="boton signo">=</div>
+      </div>
+
+
+
     </div>
+   
   </body>
 </html>
