--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <title>Calculadora</title>
   </head>
   <body>
-    <h1>Titulo</h1>
-
+   
     <div id="cuerpo" >
 
       <div id="pantalla">
         
-
       </div>
 
       <div id="teclas"> 
@@ -59,7 +57,7 @@
           <button>*</button>
         </div>
         <div class="boton signo">
-          <button>%</button>
+          <button>÷</button>
         </div>
         <div class="boton signo">
           <button>=</button>
