Añadir los divs a la pantalla

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="cuerpo" >
 
       <div id="pantalla">
+        <div id="primerValor"></div>
+        <div id="segundoValor"></div>
         
       </div>
 
