creacion del metodo borrarTodo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <button class="boton_signo" value="">DEL</button>
         </div>
         <div class="boton signo">
-          <button class="boton_signo" value="">AC</button>
+          <button class="boton_signo" onclick="borrarTodo();">AC</button>
         </div>
         
         
