--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <button class="boton_signo" value="raiz">√</button>
         </div>
         <div class="boton signo">
-          <button class="boton_signo" value="">DEL</button>
+          <button class="boton_signo" onclick="output.borrar()">DEL</button>
         </div>
         <div class="boton signo">
           <button class="boton_signo" onclick="output.borrarTodo()">AC</button>
